--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="menu">
             <h2>Topli napici</h2>
             <div class="menu-item">
-                <h3>Espress</h3>
+                <h3>Espresso</h3>
                 <span>2 KM</span>
             </div>
             <div class="menu-item">
