--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   
 	<!-- Bill Display -->
   <div id="billDisplay" class="fixed bottom-4 right-4 bg-yellow-100 dark:bg-yellow-300 text-black px-4 py-3 rounded-xl shadow-lg max-w-sm w-full">
-    <h4 class="font-bold mb-2">Your Order</h4>
+    <h4 class="font-bold mb-2">Vaš Račun:</h4>
     <ul id="itemList" class="text-sm mb-2 space-y-1"></ul>
     <div class="font-semibold text-lg">Total: <span id="billTotal">0</span><span> KM</span></div>
   </div>
