--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 	  <div class="item" onclick="addItem('Sex On The Beach (0.4l)', 8)">Sex On The Beach (0.4l) <span>8.00 KM</span></div>
 	  <div class="item" onclick="addItem('Shots (0.03l)', 5)">Shots (0.03l) <span>5.00 KM</span></div>
 	  <div class="item" onclick="addItem('Bezalkoholni kokteli (0.4l)', 6)">Bezalkoholni kokteli (0.4l) <span>6.00 KM</span></div>
+    </div>>
 
 	<h2>Alkoholna Pića</h2>
 	<div class="menu-section">
