--- a/index.html
+++ b/index.html
@@ -6,91 +6,8 @@
   <title>Mr. Smith Menu</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      font-family: 'Raleway', sans-serif;
-      background-color: #121212;
-      color: #f0f0f0;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #1f1f1f;
-      color: white;
-      text-align: center;
-      padding: 3rem 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-    }
-
-    header img {
-      max-width: 100px;
-      margin: 0 auto;
-	  display: block;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      margin: 0;
-      font-weight: 700;
-      letter-spacing: 1px;
-    }
-
-    .container {
-      max-width: 1100px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-
-    h2 {
-      font-size: 1.8rem;
-      border-left: 5px solid #ffbf00;
-      padding-left: 0.7rem;
-      margin: 2.5rem 0 1rem;
-      color: #ffbf00;
-    }
-
-    .menu-section {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1rem;
-    }
-
-    .item {
-      background-color: #1e1e1e;
-      padding: 1rem 1.2rem;
-      border-radius: 10px;
-      border: 1px solid #2e2e2e;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-      transition: transform 0.2s ease, background-color 0.2s ease;
-    }
-
-    .item:hover {
-      background-color: #2c2c2c;
-      transform: translateY(-2px);
-    }
-
-    .item::after {
-      content: "";
-      display: block;
-      clear: both;
-    }
-
-    .item span {
-      float: right;
-      font-weight: bold;
-      color: #ffbf00;
-    }
-
-    @media(max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-      .item {
-        padding: 0.8rem 1rem;
-      }
-    }
-  </style>
+  <script src="./script.js"></script>
+  <style src="./styles.css"></style>
 </head>
 <body>
   <header>
