--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script.js"></script>
-  <style src="./styles.css"></style>
+  <styles src="./styles.css"></styles>
 </head>
 <body>
   <header>
