--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Mr. Smith Menu</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="./script.js"></script>
-  <styles src="./styles.css"></styles>
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
